<resources>
    <string name="app_name">Transmilenio Plus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="select_station">Select a Station</string>
    <string name="select_from">Select from Station</string>
    <string name="select_to">Select to Station</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="calculate_route">Calculate Route</string>
    <string name="select_route_text">Select from and to where you want to travel.</string>
    <string name="origin_troncal">Bus Line  Origin</string>
    <string name="destination_troncal">Bus Line Destination</string>
    <string name="troncales">Bus Lines</string>

    <string name="origin_station">Station Origin</string>
    <string name="destination_station">Destination Origin</string>
    <string name="route_calculation">Route calculation</string>
    <string name="web_page_news">http://pruebawebserbicespx</string>
    <string name="web_services">http://pruebawebserbicespx</string>
    <string name="web_services_namespace">http://pruebawebserbicespx</string>

    <string name="stations">Stations</string>
    <string name="in_operation">In Operation</string>
    <string name="no_service">No service</string>
    <string name="transmilenio_plus">Transmilenio Plus</string>

</resources>
