<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculo_ruta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.cristiangarcia.hdtransmileniopro.CalculoRutaActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/select_route_text"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-thin"
        android:textSize="26sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"

        />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        card_view:cardElevation="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/zzz_swap_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:tint="@color/colorAccent"
                android:id="@+id/swichTextField"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingRight="40dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/select_from"
                android:id="@+id/fromEditText"
                android:focusable="false"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/select_to"
                android:id="@+id/toEditText"
                android:focusable="false"

                />
        </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        card_view:cardElevation="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"

        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_route"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:id="@+id/calculateRoute"
            />

    </android.support.v7.widget.CardView>

</LinearLayout>
